--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ Markdown==3.3.6
 MarkupSafe==2.0.1
 marshmallow==3.14.1
 mysql-client==0.0.1
+mysqlclient==2.1.0
 numpy==1.18.5
 oauthlib==3.1.1
 opencv-python==4.5.5.62
@@ -52,8 +53,8 @@ SQLAlchemy==1.4.29
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow-cpu==2.3.3
-tensorflow-estimator==2.3.0
+tensorflow-cpu==2.7.0
+tensorflow-estimator==2.7.0
 tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
 typing_extensions==4.0.1
